--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.4",
+    "@expo/metro-runtime": "^3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/progress-bar-android": "github:react-native-community/progress-bar-android",
+    "@react-native-community/slider": "^4.4.2",
+    "@react-native-picker/picker": "^2.6.1",
+    "expo": "^50.0.6",
+    "expo-av": "^13.10.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-dom": "18.2.0",
+    "react-native": "^0.73.4",
+    "react-native-document-picker": "^8.0.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
