--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "^0.73.4",
     "react-native-document-picker": "^8.0.0",
     "react-native-progress": "^5.0.1",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
