--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-inset-shadow": "^1.0.3",
+    "react-native-neomorph-shadows": "^0.0.8",
     "react-native-reanimated": "~3.6.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
