--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-query": "^3.39.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
