--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-constants": "^15.4.5",
     "expo-screen-orientation": "~6.4.1",
