--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nanoid": "^5.0.6",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-element-timer": "^2.1.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-neomorph-shadows": "^0.0.8",
@@ -33,6 +35,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-query": "^3.39.3",
+    "react-timer-hook": "^3.0.7",
     "yup": "^1.3.3"
   },
   "devDependencies": {
