--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "nanoid": "^5.0.6",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-neomorph-shadows": "^0.0.8",
+    "react-native-otp-verify": "^1.1.8",
     "react-native-reanimated": "~3.6.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
